# developer.tbd.website

./: .all-contributorsrc  .dockerignore  .env.local.example  .gitignore  .npmrc  ALR.md  Apps.Dockerfile  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  apiSidebar.js  check-versions.js  code-snippets-map.json  code-snippets.js  docker-compose.yaml  docusaurus.config.js  extract-snippets.js  generate-contributors-json.js  jest.config.js  jest.setup.js  learn-sidebars.js  netlify.toml  new-vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  propagateSdkVersions.js  propagateWeb5.js  resolver.js  sdk-versions.json  shnip.config.js  shnip.config.json  shnip.config.ts  shnippet.config.json  sidebars.js  swagger.yaml  tailwind.config.js  (+4 more)
.codesandbox/: Dockerfile  tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.storybook/: main.js  preview.js
__tests__/: code-snippets.test.js
bh-test/: how-to-create-did.test.snippet.createDidDht.js
blog/: 2019-05-28-first-blog-post.md  2022-04-27-Title-lorem-ipsum.md  2022-04-27-what-is-web5.md  2022-07-01-what-is-web5.md  2022-07-26-web5-roadmap.md  2022-08-11-did-interoperability-with-spruce.md  2022-08-15-our-interop-work-in-dif.md  2022-08-17-what-are-verifiable-credentials.md  2022-08-26-ssi-tbd-web5.md  2022-09-28-tbd-circle-partnership.md  2022-10-13-announcing-the-incubation-program.md  authors.yml  (+17 more)
site/testsuites/testsuite-rust/: Cargo.toml
site/testsuites/testsuite-rust/tests/: web5_cli_test.rs
(+2194 files in other folders)
